2008-10-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* stdlib/longlong.h: Update from GCC.

2008-10-09  Jakub Jelinek <jakub@redhat.com>
	    David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/sparcv9v/memcpy.S: When not USE_BPR,
	make sure any registers used with 64-bit 'branch-on-register'
	instructions have their top 32-bits clear.
	* sysdeps/sparc/sparc64/sparcv9v/memset.S: Likewise.
	* sysdeps/sparc/sparc64/sparcv9v2/memcpy.S: Likewise.

2008-09-18  Andreas Schwab  <schwab@suse.de>

	[BZ #6942]
	* resolv/res_send.c (send_vc): Fix use of unaligned address.
        Properly handle partial reads.

2008-10-01  Mark Shinwell  <shinwell@codesourcery.com>

	* elf/elf.h (STO_MIPS_PLT): New.
	(R_MIPS_COPY): New.
	(R_MIPS_JUMP_SLOT): New.
	(R_MIPS_NUM): Redefine to 128.
	(DT_MIPS_PLTGOT): New.
	(DT_MIPS_RWPLT): New.
	(DT_MIPS_NUM): Redefine to 0x35.

2008-10-01  Ulrich Drepper  <drepper@redhat.com>

	* timezone/africa: Update from tzdata2008f.
	* timezone/asia: Likewise.
	* timezone/australasia: Likewise.
	* timezone/europe: Likewise.
	* timezone/leapseconds: Likewise.
	* timezone/northamerica: Likewise.
	* timezone/southamerica: Likewise.
	* timezone/zone.tab: Likewise.

2008-09-30  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c: Disable use of paccept for now.

2008-09-29  Ulrich Drepper  <drepper@redhat.com>

	* socket/Versions: Remove paccept export for GLIBC_2.9.
	* socket/Makefile (routines): Remove paccept.
	* socket/sys/socket.h: Remove paccept declaration.

	* po/sv.po: Update from translation team.

2008-09-22  Deborah S. Townsend  <dstownse@us.ibm.com>

	* sysdeps/s390/s390-64/s390x-mcount.S: Replace ahi with aghi.
	* sysdeps/unix/sysv/linux/s390/s390-64/socket.S: Likewise.

2008-09-16  Ulrich Drepper  <drepper@redhat.com>

	* dlfcn/dlopen.c (dlopen_doit): Allow __RTLD_SPROF flag.
	Patch by Olivier Fourdan <ofourdan@redhat.com>.

2008-09-15  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/rpc/svc.h: Declare svcfd_create.